petite modif ccl

--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -2,7 +2,8 @@
 \addcontentsline{toc}{chapter}{Conclusion}
 %solution envisagé
 %TODO voir si on laisse cette parite et qu'on ajoute un truc concernant la dll ou si on supprime
-Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
+\paragraph{}
+Durant l'état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
 intéressante quand les caméras de profondeur n'étaient pas très répandues. Au vu des résultats fournis par S. Bilal
 \cite{haarlike}, cette méthode est efficace, mais elle n'est pas adaptée à l'animation d'une main 3D. Elle permet seulement
@@ -22,9 +23,14 @@ est l'adaptation du modèle à la main de l'utilisateur.\\
 % la souris et le clavier. Cette application doit montrer le niveau de précision qu'il est possible d'atteindre
 % avec ce genre de système.\\
 
+\paragraph{}
+Finalement, nous utilisons les points des jointures détectées par la DLL Aiolos, couplé des points 
+trouvés par la Kinect. Ainsi, nous pouvons retrouver les rotation des poignet et des doigts. 
+
 %ce que nous avons appris
 %TODO modifier un peu pour que se soit d'actualité et ajout de l'apprentissage des outils mathematique et de développement + ajout 
 %des notions vu en cours qui nous on aidé durant le projet
+\paragraph{}
 Cette première partie du projet a été très instructive, que ce soit sur l'apprentissage des techniques de détection et de manipulation
 de modèle 3D, que sur le plan de la collaboration en équipe. Nous avons énormément appris sur la rédaction d'un
 état de l'art, ainsi que sur la compréhension d'articles de recherche. Nous avons pu pleinement mettre à profit
