--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -190,26 +190,25 @@ provenant de l'image de profondeur. La fonction $\rho(e)$, quant à elle, est é
 \label{animation}
 %Blender
 Pour pouvoir animer une main de façon cohérente et réaliste, il existe plusieurs solutions.
-Cependant, dans le cadre d'une animation en temps réel et contrôlé par la main de l'utilisateur, des animations pré-calculées et maitrisées entièrement par l'animateur sont à abandonner.
-L'animation fine et la déformation de modèles 3D nécessite, le plus souvent, une armature (voir Fig. \ref{fig:armature}).\newline
-
+Cependant, dans le cadre d'une animation en temps réel et contrôlée par la main de l'utilisateur, des animations pré-calculées et maitrisées entièrement par l'animateur sont à abandonner.
+L'animation fine et la déformation de modèles 3D nécessitent, le plus souvent, une armature (voir Fig. \ref{fig:armature}).\newline
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=9cm]{images/SkellHand.jpg}
-	\caption{Armature de la main droite réalisée sur blender}
+	\caption{Armature de la main droite réalisée sur Blender}
 	\label{fig:armature}
 \end{figure}
 
-Les armatures permettent de modifier le modèle associé à partir de rotations et translations des jointures de cet armature.
+Les armatures permettent de modifier le modèle associé à partir de rotations et translations.
 Il existe de nombreuses méthodes pour réaliser cette modification.
 Celle utilisée majoritairement est d'associer les sommets du modèle aux jointures.
-Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
+Cette association peut être difficile : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
 
 Un algorithme permettant cette association floue est \og bone heat weighting \fg \cite{baran2007automatic}. 
-Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets (voir Tab. \ref{tab:repartitionPoid}). Pour rendre un résultat proche du réel, on souhaite que les poids possède certaines propriétés : \\
+Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets (voir Tab. \ref{tab:repartitionPoid}). Pour rendre un résultat proche du réel, on souhaite que les poids possèdent certaines propriétés : \\
 \begin{itemize}
-	\item Ils devraient être indépendants de la résolution du mesh, un sommet situé à un endroit du mesh devrait avoir le même poids quel
+	\item Ils devraient être indépendants de la résolution du modèle, un sommet situé à un endroit du modèle devrait avoir le même poids quel
 	que soit le nombre de sommets proches.
 	\item Ils devraient varier de façon homogène avec la surface. Les valeurs de poids ne devraient pas varier fortement si la surface est lisse mais, inversement, si elle est inégale, les valeurs devraient varier plus.
 	\item Pour éviter des artefacts liés aux plis du modèle, il doit y avoir un rapport de proportionnalité entre la largeur des jointures
@@ -228,33 +227,34 @@ Il permet de trouver les poids adaptés à l'association entre les os de l'armat
        \hline
     \end{tabular}
   \end{center}
-  \caption{Répartition des poids à différent endroit de la main}
+  \caption{Répartition des poids à différents endroits de la main}
   \label{tab:repartitionPoid}
 \end{table}
 
-Un modèle dont les sommets on été associés à l'armature à l'aide de cet algorithme peut être \og animé \fg  de façon réaliste.
+Un modèle dont les sommets ont été associés à l'armature à l'aide de cet algorithme peut être \og animé \fg  de façon réaliste.
 Pour cela, on peut créer des contraintes sur les mouvements possibles de l'armature pour correspondre à des actions possibles.
 Par exemple, pour la main, les doigts ne peuvent pas bouger librement.
 On peut donc contraindre les degrés de liberté de chaque jointure et même empêcher les translations.
-Toutes les positions de la main pouvant être exprimées par une série de rotation contraintes au niveau des jointures du squelette.\newline
+Toutes les positions de la main pouvant être exprimées par une série de rotations contraintes au niveau des jointures du squelette.\newline
 
 %Expliquation d'animation par Key Frame
-L'animation par clef permet de créer des animations fluides à partir de, au minimum, deux \og Key Frames \fg. L'animation est réalisée en calculant la position, l'orientation et la posture de l'objet animé pour chaque images entre deux \og Key Frame \fg. La technique utilisée le plus fréquemment est l'interpolation linéaire. Cette méthode est rapide comparée à d'autres techniques d'animation, cela permet d'assurer le temps réel. Cependant dans le cadre de notre projet, l'utilisateur étant celui qui contrôle l'animation du modèle, les \og Keyframes \fg \ seraient difficilement récupérable par l'outils de capture utilisé.\\
+L'animation par clef permet de créer des animations fluides à partir de, au minimum, deux \og Key Frames \fg. L'animation est réalisée en calculant la position, l'orientation et la posture de l'objet animé pour chaque image entre deux \og Key Frame \fg. La technique utilisée le plus fréquemment est l'interpolation linéaire. Cette méthode est rapide comparée à d'autres techniques d'animation, cela permet d'assurer le temps réel. Cependant dans le cadre de notre projet, l'utilisateur étant celui qui contrôle l'animation du modèle, les \og Keyframes \fg \ seraient difficilement récupérables par l'outils de capture utilisé.\\
 
 % ATTENTION : à changer si modification de la méthode d'animation
-Une autre solution consiste à n'utiliser que des informations de position obtenue par détection des articulations des doigts de la main \textit{via} un périphérique de capture.
+Une autre solution consiste à n'utiliser que des informations de position obtenues par détection des articulations des doigts de la main \textit{via} un périphérique de capture.
 Dans cette méthode, on associe les points détectés aux jointures de l'armature. Les positions des jointures du modèle sont donc naturellement contraintes par les postions des articulations de la véritable main.\newline
 
 Enfin, il existe une méthode appelée la cinématique inverse qui utilise un point fixe et un point mobile de l'armature. Elle permet de retrouver les rotations effectuées par les jointures pour que le point mobile soit à sa position connue. Pour cela, l'algorithme de cinématique inverse minimise la fonction de distance entre le point mobile de l'armature et la position que ce point doit atteindre.
-La cinématique inverse à besoin de 3 principes pour fonctionner :\\
+La cinématique inverse a besoin de 3 principes pour fonctionner :\\
 \begin{itemize}
-	\item Les membres sont des solides indéformables de longueur donnée, reliés entre eux par des articulation. Ce principe est respecté par l'armature : les os peuvent être indéformable et leurs tailles peut être fixé, ils sont reliés entre eux par des articulation.
+	\item Les membres sont des solides indéformables de longueur donnée, reliés entre eux par des articulations. Ce principe est respecté par l'armature : les os peuvent être indéformables et leur taille peut être fixée, ils sont reliés entre eux par des articulations.
 	\item Les articulations supportent une certaine torsion maximale qui varie selon la direction et la vitesse. Ces deux contraintes peuvent être appliquées aux jointures d'une armature.
 	\item Les mouvements sont supposés suffisamment réguliers pour paraitre naturels. Comme les points mobiles sont obtenus à partir de mouvements d'une main réelle, ils vont nécessairement paraitre naturels.
 \end{itemize}
 \paragraph{}
+%TODO avant qui ????
 Les techniques classiques de résolution de la cinématique inverse consistent à inverser les équations de cinématique avant qui retrouvent la position à partir des rotations des articulations.
-Le problème principale vient de la difficulté de cette inversion et de la possibilité d'un ensemble vide de solutions, les techniques classiques utilisent donc des méthodes d'optimisation itératives comme Iterative Closest Points ou l'Algorithme Levenberg-Marquardt pour palier ces problèmes.
+Le problème principal vient de la difficulté de cette inversion et de la possibilité d'un ensemble vide de solution, les techniques classiques utilisent donc des méthodes d'optimisation itératives comme \og Iterative Closest Points \fg ou l'Algorithme Levenberg-Marquardt pour palier ces problèmes.
 
 \section{Evaluation des solutions envisagées}
 Parmi les solutions que nous avons envisagées dans cet état de l'art, nous avons vu que la solution avec une
